<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.AddOrEditInstructionActivity">
    
    
    <TextView
        android:id="@+id/instruction_format_selection_text_view"
        android:hint="@string/select_instruction_format"
        android:textSize="20sp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/radio_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/r_type"
            android:onClick="checkButton"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/i_type"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/s_type"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/b_type"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radio_button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/j_type"
            android:onClick="checkButton"/>
    </RadioGroup>

    <TextView
        android:id="@+id/opcode_selection_text_view"
        android:hint="@string/select_opcode_format"
        android:textSize="20sp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <NumberPicker
        android:id="@+id/opcode_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_number"
        android:layout_margin="8dp"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <NumberPicker
        android:id="@+id/instruction_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>